git commit -m "Examples"

--- a/Example9.ipynb
+++ b/Example9.ipynb
@@ -8,13 +8,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "- `Definition`\n",
+    "  - The Fibonacci sequence is a series of numbers in which each number (known as a Fibonacci number) is the sum of the two preceding ones, usually starting with 0 and 1. Mathematically, it is defined by the recurrence relation:\n",
+    "\n",
+    "    F(n)=F(n−1)+F(n−2)\n",
+    "\n",
+    "    with initial conditions:\n",
+    "\n",
+    "    F(0)=0,F(1)=1\n",
+    "\n",
+    "    The sequence begins: 0, 1, 1, 2, 3, 5, 8, 13, 21, 34, and so on.\n",
+    "\n",
+    "    In terms of the recurrence relation, each Fibonacci number is the sum of the two preceding numbers. For example:\n",
+    "\n",
+    "    F(2)=F(1)+F(0)=1+0=1\n",
+    "\n",
+    "    F(3)=F(2)+F(1)=1+1=2\n",
+    "\n",
+    "    And so on. The Fibonacci sequence has applications in various areas, including mathematics, computer science, nature, and art. It exhibits interesting patterns and properties that make it a fascinating topic of study."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With While Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Numbers up to 5 : [0, 1, 1, 2, 3, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_fibonacci(limit):\n",
-    "    fibonacci_numbers = [0, 1]\n",
+    "    fibonacci_numbers = [0, 1] # Initial Fibonacci numbers or conditions for Fibonacci sequence\n",
     "\n",
     "    while True:\n",
     "        next_number = fibonacci_numbers[-1] + fibonacci_numbers[-2]\n",
@@ -25,11 +64,46 @@
     "    return fibonacci_numbers\n",
     "\n",
     "# Set the limit for Fibonacci numbers\n",
-    "limit = 1000\n",
+    "limit = int(input(\"Enter the limit for Fibonacci numbers: \"))\n",
     "\n",
     "# Generate and print Fibonacci numbers up to the limit\n",
     "fibonacci_sequence = generate_fibonacci(limit)\n",
     "print(\"Fibonacci Numbers up to\", limit, \":\", fibonacci_sequence)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With For Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Numbers up to 5 : [0, 1, 1, 2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fibonacci_numbers = [0, 1] # Initial Fibonacci numbers or conditions for Fibonacci sequence\n",
+    "\n",
+    "for i in range(limit):\n",
+    "    number = fibonacci_numbers[-1] + fibonacci_numbers[-2]\n",
+    "    if number > limit:\n",
+    "        break\n",
+    "    fibonacci_numbers.append(number)\n",
+    "\n",
+    "limit = int(input(\"Enter the limit for Fibonacci numbers: \"))\n",
+    "\n",
+    "# Print the Fibonacci numbers up to the limit\n",
+    "print(\"Fibonacci Numbers up to\", limit, \":\", fibonacci_numbers)\n"
    ]
   },
   {
