git commit -m "Add new examples"

--- a/Example22.ipynb
+++ b/Example22.ipynb
@@ -16,6 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'this': 2, 'is': 1, 'a': 1, 'sample': 1, 'text': 2, 'will': 1, 'be': 1, 'used': 1, 'for': 1, 'counting': 1, 'word': 1, 'occurrences': 1}\n",
       "this: 2\n",
       "is: 1\n",
       "a: 1\n",
@@ -37,6 +38,8 @@
     "    text = text.lower()\n",
     "    \n",
     "    # Remove punctuation and split the text into words\n",
+    "    # isalnum() checks if the character is alphanumeric (a-z, A-Z, or 0-9), returns True if it is alphanumeric and False if it is not\n",
+    "    # isspace() checks if the character is a space, tab, or newline, returns True if all the characters in a string are whitespace characters (spaces, tabs, newlines), and the string is not empty. If the string contains at least one non-whitespace character, it returns False.\n",
     "    words = ''.join(char if char.isalnum() or char.isspace() else ' ' for char in text).split()\n",
     "\n",
     "    # Count the occurrences of each word\n",
@@ -52,6 +55,8 @@
     "# Example usage\n",
     "input_text = \"This is a sample text. This text will be used for counting word occurrences.\"\n",
     "word_occurrences = count_word_occurrences(input_text)\n",
+    "\n",
+    "print(word_occurrences)\n",
     "\n",
     "# Print the word occurrences\n",
     "for word, count in word_occurrences.items():\n",
@@ -109,10 +114,25 @@
     "input_text = \"This is another example, with some punctuation! How many times will each word appear?\"\n",
     "word_occurrences = count_word_occurrences(input_text)\n",
     "\n",
+    "\n",
     "# Print the word occurrences\n",
     "for word, count in word_occurrences.items():\n",
     "    print(f\"{word}: {count}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
